# softfloat

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/src/: f32_fuzz.rs  f64_fuzz.rs  lib.rs
src/: conv.rs  lib.rs
src/soft_f32/: add.rs  copysign.rs  cos.rs  div.rs  floor.rs  impl_trait.rs  mod.rs  mul.rs  pow.rs  round.rs  sin.rs  sqrt.rs  trunc.rs
src/soft_f32/helpers/: k_cosf.rs  k_sinf.rs  rem_pio2f.rs
src/soft_f64/: add.rs  cos.rs  div.rs  exp.rs  floor.rs  impl_trait.rs  log.rs  mod.rs  mul.rs  pow.rs  round.rs  sin.rs  sqrt.rs  trunc.rs
src/soft_f64/helpers/: k_cos.rs  k_sin.rs  rem_pio2.rs  rem_pio2_large.rs
