[workspace]
members = [
    "fuzz",
]

[package]
name = "softfloat"
version = "1.0.0"
edition = "2021"
description = "Pure software floating-point implementation, with `const` and `no_std` support"
keywords = ["const", "soft", "softfloat", "float-point"]
categories = ["no-std"]
repository = "https://github.com/koute/softfloat"
license = "MIT OR Apache-2.0"

[dependencies]

[dev-dependencies]
cfg-if = "1"

[profile.test]
opt-level = 3
lto = "fat"
debug-assertions = true
